--- a/report/glossary.tex
+++ b/report/glossary.tex
@@ -44,6 +44,14 @@ first={Computer-aided design (CAD)\glsadd{cadg}}, see=[Glossary:]{cadg}}
 description={Microcontroller Unit}, 
 first={Microcontroller Unit (MCU)\glsadd{mcug}}, see=[Glossary:]{mcug}}
 
+%%% PCB
+\newglossaryentry{pcbg}{name={PCB},
+    description={A Printed Circuit Board (PCB) is the common acronym when
+	referring to populated circuit boards.}}
+\newglossaryentry{pcb}{type=\acronymtype, name={PCB}, 
+description={Printed Circuit Board}, 
+first={Printed Circuit Board (PCB)\glsadd{pcbg}}, see=[Glossary:]{pcbg}}
+
 %%% SEK
 \newglossaryentry{sekg}{name={SEK},
     description={Swedish Krona (SEK) is the currency in Sweden}}
@@ -175,6 +183,14 @@ first={National Marine Electronics Association standard (NMEA)\glsadd{nmeag}}, s
 \newglossaryentry{uml}{type=\acronymtype, name={UML}, 
 description={Unified Modeling Language}, 
 first={Unified Modeling Language (UML)\glsadd{umlg}}, see=[Glossary:]{umlg}}
+
+%%% VIA
+\newglossaryentry{viag}{name={via},
+    description={A vertical interconnect access (via) is an electrical connection between
+	layers in a physical electronic circuit.}}
+\newglossaryentry{via}{type=\acronymtype, name={VIA}, 
+description={vertical interconnect access}, 
+first={(via)\glsadd{viag}}, see=[Glossary:]{viag}}
 
 %%% PNG
 \newglossaryentry{pngg}{name={PNG},
