Attributed introduction to Kenny

--- a/report/main.tex
+++ b/report/main.tex
@@ -94,7 +94,7 @@
 \clearpage
 \setcounter{page}{2}
 \section{Introduction}
-\chapterauthor{who??? (no one)}
+\chapterauthor{Eriksson, Kenny (no one)}
 \input{introduction.tex}
 
 \section{The Physics of Sailing}
