report and schematics

--- a/report/main.tex
+++ b/report/main.tex
@@ -107,7 +107,7 @@
 \input{application.tex}
 
 \clearpage
-\section{Hardware Design}\label{sec:hwdesign}
+\section{Main sensorboard design}\label{sec:hw}
 \chapterauthor{Brolin, Daniel (one, no)}
 \input{hw_design.tex}
 
@@ -117,7 +117,7 @@
 \input{sensors.tex}
 
 \clearpage
-\section{Software Design}
+\section{Software Design}\label{sec:sw}
 \chapterauthor{Sjölund, Johannes (no one)}
 \input{software_design.tex}
 \input{android.tex}
