--- a/report/APPENDIX.tex
+++ b/report/APPENDIX.tex
@@ -1,14 +1,33 @@
-\section{APPENDIX}
-\label{sec:app}
+\section{APPENDIX}\label{sec:app}
 
 \begin{figure*}[htb]
 	\centering
-    \includegraphics[width=.75\linewidth]{Figures/casing_dimensions.png}
+    \includegraphics[width=\linewidth]{Figures/casing_dimensions.png}
 	\caption{System enclosure shape and dimensions}
 	\label{fig:casdim}
 \end{figure*}
 
-%INSERT Image of circuit board
+%Image of schematic(s) (Rev 3)
+\begin{figure*}[htb]
+	\centering
+    \includegraphics[width=\linewidth]{Figures/schem_r3_a.png}
+	\caption{Schematic of revision 3, part a: Required circuitry}
+	\label{fig:schr3a}
+\end{figure*}
+\begin{figure*}[tbh]
+	\centering
+    \includegraphics[width=\linewidth]{Figures/schem_r3_b.png}
+	\caption{Schematic of revision 3, part b: Modules}
+	\label{fig:schr3b}
+\end{figure*}
+\begin{figure*}[tbh]
+	\centering
+    \includegraphics[width=\linewidth]{Figures/schem_r3_c.png}
+	\caption{Schematic of revision 3, part c: Meta circuitry}
+	\label{fig:schr3c}
+\end{figure*}
+
+%INSERT Image of circuit board(s)
 
 %INSERT Image of Battery circuit
 
