--- a/report/glossary.tex
+++ b/report/glossary.tex
@@ -185,12 +185,12 @@ description={Unified Modeling Language},
 first={Unified Modeling Language (UML)\glsadd{umlg}}, see=[Glossary:]{umlg}}
 
 %%% VIA
-\newglossaryentry{viag}{name={via},
+\newglossaryentry{viag}{name={VIA},
     description={A vertical interconnect access (via) is an electrical connection between
 	layers in a physical electronic circuit.}}
-\newglossaryentry{via}{type=\acronymtype, name={VIA}, 
+\newglossaryentry{via}{type=\acronymtype, name={via}, 
 description={vertical interconnect access}, 
-first={(via)\glsadd{viag}}, see=[Glossary:]{viag}}
+first={via\glsadd{viag}}, see=[Glossary:]{viag}}
 
 %%% PNG
 \newglossaryentry{pngg}{name={PNG},
