--- a/report/hw_design.tex
+++ b/report/hw_design.tex
@@ -1,9 +1,9 @@
-\subsection{Battery circuitry}
-Write something about the battery circuit, what program you used and something about the revisions?
+This chapter will summarize most of the process of creating the \gls{pcb} used to mount all the sensors and sending the data to the phone application. This circuit board will be the link between the physical forces and manipulated data sent to the handheld device. More on how this data is manipulated and how the circuit board is programmed in \autoref{sec:sw}. 
 
-\subsection{Main circuitry and requirements}
+\subsection{Main circuitry and requirements}\label{sec:hw:req}
 The main circuit board is built using the open source electronic design software KiCad\cite{kicad}. It is completely free to use and the source code is open for any modifications.
-The circuit board must fulfill the following:
+
+The circuit board must minimally fulfill the following:
 \begin{itemize}
 \item Circuit must fit within the casing, with dimensions extracted directly from the cad software\cite{cad}, see \autoref{fig:casdim}.
 \item Circuit must be easy to test for both hardware and software errors. Even complete system needs this, since many of the sensors are very small and difficult to solder.
@@ -12,8 +12,16 @@ The circuit board must fulfill the following:
 \item All components needs to be actively manufactured to ensure unit can keep being produced for several years in the future.
 \end{itemize}
 
-\subsubsection{Revisions}
-In total three revisions of the \gls{pcb} was designed. First revision included the main functionality and test points on basically every pin in the system. It did not follow any space requirements and was riddled with small problems.
+\subsection{method}
+Designing circuit boards differs slightly between what software you are using. KiCad\cite{kicad} uses a four step process as follows:
+\begin{enumerate}
+\item stuff
+\end{enumerate}
+
+\subsection{Revisions}\label{sec:hw:rev}
+In total three revisions of the \gls{pcb} was designed. The initial 
+
+First revision included the main functionality and test points on basically every pin in the system. It did not follow any space requirements and was riddled with small problems.
 
 The second revision fixed all known problems, followed the space requirements and added a lot of customization. The option to toggle power source and what \gls{imu}s were currently powered were added. This way the effect from individual modules could be measured. Also since it was still unclear if a combined chip for all \gls{imu}s would be added or not, space for all of them and an evaluation module was added.
 
@@ -40,11 +48,11 @@ For the third revision all decisions have been made. Following communicative dev
 \end{itemize}
 All \gls{i2c} communicative devices is moved to one spot ensuring the shortest possible \gls{i2c} data line. Ground \gls{via}s was added around communication traces to prevent unwanted interference, ground \gls{via}s were also added to prevent antennas\footnote{Antennas appear from letting an isolated thin ground be connected in only one end, a \gls{via} can therefore be added to the other end to prevent this from happening.}.
 
-\subsubsection{choices (TiP)}
+\subsection{choices (TiP)}\label{sec:hw:tip1}
 stuff3
 
-\subsubsection{results (TiP)}
+\subsection{results (TiP)}\label{sec:hw:tip2}
 stuff4
 
-\subsubsection{discussion (TiP)}
+\subsection{discussion (TiP)}\label{sec:hw:tip3}
 stuff5
