images, some more report and weird glossary problem.

--- a/report/glossary.tex
+++ b/report/glossary.tex
@@ -93,10 +93,20 @@ first={STMicroelectronics (ST)\glsadd{stg}}, see=[Glossary:]{stg}}
 %%% UART
 \newglossaryentry{uartg}{name={UART},
     description={Universal Asynchronous Receiver-Transmitter (UART) is a 
-    computer hardware device for asynchronous serial communication}}
+    computer hardware device for asynchronous serial communication 
+	in which the data format and transmission speeds are configurable. It generally requires
+	less power and is slower than its counterpart USART}}
 \newglossaryentry{uart}{type=\acronymtype, name={UART}, 
 description={Universal Asynchronous Receiver-Transmitter}, 
 first={Universal Asynchronous Receiver-Transmitter (UART)\glsadd{uartg}}, see=[Glossary:]{uartg}}
+
+%%% USART
+\newglossaryentry{usartg}{name={USART},
+    description={Universal Synchronous Asynchronous Receiver-Transmitter (USART) is a 
+    computer hardware device for synchronous asynchronous serial communication}}
+\newglossaryentry{usart}{type=\acronymtype, name={USART}, 
+description={Universal Synchronous Asynchronous Receiver-Transmitter}, 
+first={Universal Synchronous Asynchronous Receiver-Transmitter (USART)\glsadd{usartg}}, see=[Glossary:]{usartg}}
 
 %%% USB
 \newglossaryentry{usbg}{name={USB},
