--- a/report/hw_design.tex
+++ b/report/hw_design.tex
@@ -15,7 +15,7 @@ The circuit board must minimally fulfill the following:
 \subsection{method}
 Designing circuit boards differs slightly between what software you are using. KiCad\cite{kicad} uses a four step process as follows:
 \begin{enumerate}
-\item stuff
+\item Draw schematic including information on all components to be used and how all of them are to be connected. 
 \end{enumerate}
 
 \subsection{Revisions}\label{sec:hw:rev}
