--- a/report/APPENDIX.tex
+++ b/report/APPENDIX.tex
@@ -1,33 +1,51 @@
 \section{APPENDIX}\label{sec:app}
 
-\begin{figure*}[htb]
+\begin{figure}[htb]
 	\centering
     \includegraphics[width=\linewidth]{Figures/casing_dimensions.png}
 	\caption{System enclosure shape and dimensions}
 	\label{fig:casdim}
-\end{figure*}
+\end{figure}
 
 %Image of schematic(s) (Rev 3)
-\begin{figure*}[htb]
+\begin{figure}[htb]
 	\centering
     \includegraphics[width=\linewidth]{Figures/schem_r3_a.png}
 	\caption{Schematic of revision 3, part a: Required circuitry}
 	\label{fig:schr3a}
-\end{figure*}
-\begin{figure*}[tbh]
+\end{figure}
+\begin{figure}[tbh]
 	\centering
     \includegraphics[width=\linewidth]{Figures/schem_r3_b.png}
 	\caption{Schematic of revision 3, part b: Modules}
 	\label{fig:schr3b}
-\end{figure*}
-\begin{figure*}[tbh]
+\end{figure}
+\begin{figure}[tbh]
 	\centering
     \includegraphics[width=\linewidth]{Figures/schem_r3_c.png}
 	\caption{Schematic of revision 3, part c: Meta circuitry}
 	\label{fig:schr3c}
-\end{figure*}
+\end{figure}
 
 %INSERT Image of circuit board(s)
+\begin{figure}[tbh]
+	\centering
+    \includegraphics[width=\linewidth]{Figures/pcb_rev1.jpg}
+	\caption{First (1) revision circuit board}
+	\label{fig:pcbr1}
+\end{figure}
+\begin{figure}[tbh]
+	\centering
+    \includegraphics[width=\linewidth]{Figures/pcb_rev2.jpg}
+	\caption{Second (2) revision circuit board}
+	\label{fig:pcbr2}
+\end{figure}
+\begin{figure}[tbh]
+	\centering
+    \includegraphics[width=\linewidth]{Figures/pcb_rev3.jpg}
+	\caption{third (3) revision circuit board}
+	\label{fig:pcbr3}
+\end{figure}
 
 %INSERT Image of Battery circuit
 
