--- a/report/glossary.tex
+++ b/report/glossary.tex
@@ -90,6 +90,22 @@ first={ARM architecture (ARM)\glsadd{armg}}, see=[Glossary:]{armg}}
 description={STMicroelectronics}, 
 first={STMicroelectronics (ST)\glsadd{stg}}, see=[Glossary:]{stg}}
 
+%%% DRC
+\newglossaryentry{drcg}{name={DRC},
+    description={Design Rule Check (DRC) is an automated check of your designed \gls{pcb}
+	to see if it follows all specified design rules}}
+\newglossaryentry{drc}{type=\acronymtype, name={DRC}, 
+description={Design Rule Check}, 
+first={Design Rule Check (DRC)\glsadd{drcg}}, see=[Glossary:]{drcg}}
+
+%%% ERC
+\newglossaryentry{ercg}{name={ERC},
+    description={Electronic Rule Check (ERC) is an automated check of your designed schematic
+	to see if it follows all electronic rules}}
+\newglossaryentry{erc}{type=\acronymtype, name={ERC}, 
+description={Electronic Rule Check}, 
+first={Electronic Rule Check (ERC)\glsadd{ercg}}, see=[Glossary:]{ercg}}
+
 %%% UART
 \newglossaryentry{uartg}{name={UART},
     description={Universal Asynchronous Receiver-Transmitter (UART) is a 
