--- a/report/main.tex
+++ b/report/main.tex
@@ -6,10 +6,10 @@
 \usepackage{lipsum}
 \usepackage{amssymb,amsmath}
 \usepackage{gensymb}
-\usepackage{listings}
 \usepackage{amsfonts}
 \usepackage{todonotes}
 \usepackage{listings}
+\usepackage{enumitem}
 \usepackage{scrextend}
 \usepackage{graphicx, xcolor}
 \usepackage{rotating}
@@ -102,9 +102,9 @@
 \chapterauthor{Theolin, Henrik (Axelsson, Oskar)}
 \input{physics.tex}
 
-\section{Product Application}
-\label{sec:application}
-\input{application.tex}
+%\section{Product Application}
+%\label{sec:application}
+%\input{application.tex}
 
 \clearpage
 \section{Main sensorboard design}\label{sec:hw}
