--- a/report/references.tex
+++ b/report/references.tex
@@ -10,8 +10,10 @@
 \bibitem{kicad}
   KiCad open source electronics design,
   \url{kicad-pcb.org/}
-\bibitem{cad}
-	MISSING reference to cad software used to develop casing
+\bibitem{overprotection}
+	Overvoltage and Reverce-voltage Protection in Automotive Systems,
+	Application note 760, \emph{Maxim integrated}, Apr 02, 2002, 
+	\url{https://www.maximintegrated.com/en/app-notes/index.mvp/id/760}
 \bibitem{x-cube-ble1}
   \url{http://www.st.com/en/embedded-software/x-cube-ble1.html}
 \bibitem{x-cube-mems1}
@@ -36,6 +38,12 @@
   \url{https://developer.android.com/reference/android/app/Service.html}
 \bibitem{lat-long-calc}
   \url{https://www.movable-type.co.uk/scripts/latlong.html}
+\bibitem{lm1117}
+	KiCad library entry for voltage regulator component lm1117 by \emph{ObKo}, 2012  
+  \url{https://github.com/ObKo/kicad-libraries/blob/master/libraries/lm1117.lib}
+\bibitem{ftdi}
+	KiCad library entry for USBtoSerial component FT232RL by \emph{jbaker0428}, Oct 3, 2010
+	\url{https://github.com/jbaker0428/Kicad-Libraries/blob/master/library/ftdi.lib}
 \bibitem{rhumb-line}
   \url{https://en.wikipedia.org/wiki/Rhumb_line}
 \bibitem{equirectangular}
