Order of Chapters revised, Authors of chapters revised

--- a/report/main.tex
+++ b/report/main.tex
@@ -94,7 +94,7 @@
 \clearpage
 \setcounter{page}{2}
 \section{Introduction}
-\chapterauthor{Eriksson, Kenny (no one)}
+\chapterauthor{Eriksson, Kenny (Sjölund, Johannes)}
 \input{introduction.tex}
 
 \section{The Physics of Sailing}
@@ -105,20 +105,24 @@
 %\section{Product Application}
 %\label{sec:application}
 %\input{application.tex}
-
 \clearpage
-\section{Main sensorboard design}\label{sec:hw}
-\chapterauthor{Brolin, Daniel (one, no)}
-\input{hw_design.tex}
-
-\clearpage
-\section{Sensors}
-\chapterauthor{Lundberg, Josef (no onel)}
+\section{Mechanical sensors}
+\chapterauthor{Lundberg, Josef (Grape, Elias)}
 \input{sensors.tex}
 
 \clearpage
+\section{Main sensorboard design}\label{sec:hw}
+\chapterauthor{Brolin, Daniel (Eriksson, Kenny)}
+\input{hw_design.tex}
+
+\clearpage
+\section{Battery charging circuitry}\label{sec:bat}
+\chapterauthor{Grape, Elias (Lundberg, Josef)}
+\input{charging_design.tex}
+
+\clearpage
 \section{Software Design}\label{sec:sw}
-\chapterauthor{Sjölund, Johannes (no one)}
+\chapterauthor{Sjölund, Johannes (Brolin, daniel)}
 \input{software_design.tex}
 \input{android.tex}
 \input{software_results.tex}
