--- a/report/sensors.tex
+++ b/report/sensors.tex
@@ -114,7 +114,7 @@ Now that we know how to get the force measurements, we are going to talk about h
 
 \subsection{Height of centerboard sensor}
 
-The main issues might be that the Height of centerboard: % That the height of the centerboard what?
+The main issues might be that the height of centerboard: % That the height of the centerboard what?
 One of the best implementations of a height sensor would be the use of a linear wire distance sensor. This particular sensor measures how far a wire is pulled, which gives a very accurate measurement. This solution can be completely watertight and concealed in the main centerboard.  
 
 \begin{figure}[H]% As mentioned before, H -> tb, Refer to all figures used, use width only to /restrict/ size.
